--- a/learnPythonBlockchain_mod1.ipynb
+++ b/learnPythonBlockchain_mod1.ipynb
@@ -6,6 +6,7 @@
       "name": "learnPythonBlockchain-mod1.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +39,7 @@
         "\n",
         "##### _The code in this notebook is from the __Learn Python by Building a Blockchain & Cryptocurrency__ Udemy Course by Academind._\n",
         "\n",
-        "This script creates a blockchain (or list). Initialize the first block with the number 1. To add a new block to the initial (__Genesis__) block, we use the Python append function. In this example, the transaction amounts are fixed. We will correct that shortly, with variables."
+        "This script creates a blockchain (or list). Initialize the first block with the number 1. To add a new block to the initial (__Genesis__) block, we use the Python append function. In this example, the transaction amounts are fixed. We will correct that shortly, with variables. Enjoy!"
       ]
     },
     {
